--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
 		"dev": "react-router dev",
 		"start": "react-router-serve ./build/server/index.js",
 		"typecheck": "react-router typegen && tsc",
+		"format": "biome format --write",
+		"lint": "biome check --fix --unsafe",
 		"prisma:init": "prisma migrate diff --from-empty --to-schema prisma/schema.prisma --script > prisma/migrations/0_init/migration.sql",
 		"prisma:init-resolve": "prisma migrate resolve --applied 0_init",
 		"prisma:generate": "prisma generate",
