Remove Prisma configuration and migration files, including schema definitions and related SQL migrations for itinerary, budget, packing, and plan models.

--- a/package.json
+++ b/package.json
@@ -8,17 +8,12 @@
 		"start": "react-router-serve ./build/server/index.js",
 		"typecheck": "react-router typegen && tsc",
 		"format": "biome format --write",
-		"lint": "biome check --fix --unsafe",
-		"prisma:init": "prisma migrate diff --from-empty --to-schema prisma/schema.prisma --script > prisma/migrations/0_init/migration.sql",
-		"prisma:init-resolve": "prisma migrate resolve --applied 0_init",
-		"prisma:generate": "prisma generate",
-		"prisma:migrate": "prisma migrate dev"
+		"lint": "biome check --fix --unsafe"
 	},
 	"dependencies": {
-		"@prisma/adapter-better-sqlite3": "^7.1.0",
-		"@prisma/client": "^7.1.0",
 		"@react-router/node": "7.10.1",
 		"@react-router/serve": "7.10.1",
+		"@supabase/supabase-js": "^2.87.1",
 		"dotenv": "^17.2.3",
 		"isbot": "^5.1.31",
 		"lucide-react": "^0.555.0",
@@ -30,11 +25,9 @@
 		"@biomejs/biome": "2.3.8",
 		"@react-router/dev": "7.10.1",
 		"@tailwindcss/vite": "^4.1.13",
-		"@types/better-sqlite3": "^7.6.13",
 		"@types/node": "^22",
 		"@types/react": "^19.2.7",
 		"@types/react-dom": "^19.2.3",
-		"prisma": "^7.1.0",
 		"tailwindcss": "^4.1.13",
 		"typescript": "^5.9.2",
 		"vite": "^7.1.7",
