--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.8",
+		"@cloudflare/vite-plugin": "^1.17.0",
 		"@react-router/dev": "7.10.1",
 		"@tailwindcss/vite": "^4.1.13",
 		"@types/node": "^22",
@@ -31,6 +32,7 @@
 		"tailwindcss": "^4.1.13",
 		"typescript": "^5.9.2",
 		"vite": "^7.1.7",
-		"vite-tsconfig-paths": "^5.1.4"
+		"vite-tsconfig-paths": "^5.1.4",
+		"wrangler": "^4.53.0"
 	}
 }
