Remove unused Cloudflare variable from wrangler configuration

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,11 +1,9 @@
 {
 	"$schema": "node_modules/wrangler/config-schema.json",
 	"name": "trip-planner",
+	"compatibility_flags": ["nodejs_compat"],
 	"compatibility_date": "2025-04-04",
 	"main": "./workers/app.ts",
-	"vars": {
-		"VALUE_FROM_CLOUDFLARE": "Hello from Cloudflare"
-	},
 	"observability": {
 		"enabled": true
 	}
