Add @react-router/cloudflare dependency and update app handler

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -3,10 +3,7 @@
 	"name": "trip-planner",
 	"compatibility_flags": ["nodejs_compat"],
 	"compatibility_date": "2025-04-04",
-	"main": "./build/server/index.js",
-	"assets": {
-		"directory": "./build/client"
-	},
+	"main": "./workers/app.ts",
 	"observability": {
 		"enabled": true
 	}
