--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"lint": "biome check --fix --unsafe"
 	},
 	"dependencies": {
+		"@react-router/cloudflare": "^7.10.1",
 		"@react-router/node": "7.10.1",
 		"@react-router/serve": "7.10.1",
 		"@supabase/supabase-js": "^2.87.1",
