Add budget and packing item update handlers in PublicPlan component

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -9,5 +9,11 @@
 	},
 	"observability": {
 		"enabled": true
-	}
+	},
+	"routes": [
+		{
+			"pattern": "trip.qinbeans.net",
+			"custom_domain": true
+		}
+	]
 }
