--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
 		"lucide-react": "^0.555.0",
 		"react": "^19.2.1",
 		"react-dom": "^19.2.1",
-		"react-router": "7.10.1"
+		"react-markdown": "^10.1.0",
+		"react-router": "7.10.1",
+		"remark-gfm": "^4.0.1"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.8",
 		"@cloudflare/vite-plugin": "^1.17.0",
 		"@react-router/dev": "7.10.1",
+		"@tailwindcss/typography": "^0.5.19",
 		"@tailwindcss/vite": "^4.1.13",
 		"@types/node": "^22",
 		"@types/react": "^19.2.7",
